--- a/app.json
+++ b/app.json
@@ -1,12 +1,38 @@
 {
     "pages": [
-        "pages/index/index"
+        "pages/shop/shop",
+        "pages/every/every",
+        "pages/cart/cart",
+        "pages/my/my"
     ],
     "window": {
         "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "Weixin",
-        "navigationBarTextStyle": "black"
+        "navigationBarBackgroundColor": "#000",
+        "navigationBarTitleText": "扫码购",
+        "navigationBarTextStyle": "white"
+    },
+    "tabBar": {
+      "selectedColor": "#f06a0a",
+      "list": [
+        {
+          "iconPath": "/assets/images/index02.png",
+          "selectedIconPath": "/assets/images/index01.png",
+          "pagePath": "pages/shop/shop",
+          "text" : "扫码购物"
+        },
+        {
+          "iconPath": "/assets/images/product02.png",
+          "selectedIconPath": "/assets/images/product01.png",
+          "pagePath": "pages/every/every",
+          "text" : "每日优选"
+        },
+        {
+          "iconPath": "/assets/images/user02.png",
+          "selectedIconPath": "/assets/images/user01.png",
+          "pagePath": "pages/my/my",
+          "text" : "个人中心"
+        }
+      ]
     },
     "style": "v2",
     "sitemapLocation": "sitemap.json"
