跳转订单页面,实现订单页面布局以及功能

--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
         "pages/shop/shop",
         "pages/every/every",
         "pages/cart/cart",
-        "pages/my/my"
+        "pages/my/my",
+        "pages/order/order",
+        "pages/payment/payment"
     ],
     "window": {
         "backgroundTextStyle": "light",
